--- a/lesson1.html
+++ b/lesson1.html
@@ -7,7 +7,7 @@
 <img src="../img/Homer.png" height="400" width="300"/>
 <p style="color: royalblue;">Опис. Лінивий,бідний, не програміст.</p>
 <ol>
-  <li>Homer
+  <li>Homer.
     <ul>
       <li>Трясця</li>
       <li>От же ш невдача</li>
