--- a/lesson2/lesson2.html
+++ b/lesson2/lesson2.html
@@ -7,18 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-    <style>
 
-    </style>
 </head>
 <body>
-<ul>
+
+<div>
     <ol class="target"> Widgets</ol>
-</ul>
+</div>
+
 <div class="Global-box">
     <div class="box">big Widgets</div>
     <div class="box">bigger Widgets</div>
     <div class="box">huge Widgets</div>
 </div>
+
+<div>
+    <ol class="target"> Contend</ol>
+</div>
+
 </body>
 </html>
